infras/k8s/comment-manifests/comment-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    konghq.com/methods: GET,POST,PUT,DELETE
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /api/comments/
            pathType: Prefix
            backend: 
              service:  
                name: comment-srv
                port:
                  number: 4001
